# Py_WEB_HW_9

./: pyproject.toml
part_1/: main.py
part_1/database/: connect.py  models.py  seed.py
part_1_Beautiful_Soup/: main.py
part_1_Beautiful_Soup/database/: config.ini  seed.py
part_1_Beautiful_Soup/json_data/: authors.json
part_2/json_data/: authors.json
part_2_Scrapy/: main.py
part_2_Scrapy/json_data/: authors.json
