[tool.poetry]
name = "homework-9"
version = "0.1.0"
description = ""
authors = ["Oleksii Latypov <oleksii.latypov.la@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_9"}]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
mongoengine = "^0.27.0"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
